# requests_min

./: .gitignore  README.md  bundle-macos.sh  index.html  package-lock.json  package.json  vite.config.ts
design-systems/: COMPONENTS.md  README.md  TOKENS.md  base.css  components.css  index.html  layout.css  tokens.css
ref_design/: ai-import.html  collections.html  environments.html  index.html  settings.html  styles.css  workspace.html
src/: App.tsx  main.tsx  store.flow.test.mjs  store.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  collection.rs  flows.rs  github.rs  grpc.rs  http.rs  lib.rs  main.rs  proto_source.rs  secrets.rs  ws.rs
src-tauri/src/import/: curl.rs  mod.rs  openapi.rs  postman.rs
src-tauri/tests/: github_setup.rs
src-tauri/tests/fixtures/: greeter.proto  openapi3.yaml  postman21.json
src-tauri/tests/fixtures/imports/: main.proto
src-tauri/tests/fixtures/javaish/src/main/proto/: gateway-service.proto  promotion-service.proto
src-tauri/tests/fixtures/shared/: base.proto
src-tauri/tests/fixtures/tree/: entry.proto
src-tauri/tests/fixtures/tree/app/v1/: common.proto  svc.proto
src-tauri/tests/fixtures/versions/: slot-v1.proto  slot-v2.proto
src/components/: CommandPalette.tsx  Dialog.tsx  Inspector.tsx  RequestContextMenu.tsx  ResizeHandles.tsx  Sidebar.tsx  Statusbar.tsx  TabsBar.tsx  Titlebar.tsx  Toast.tsx  aiCollectionFeatures.test.mjs  appShortcuts.test.mjs  commandPalette.test.mjs  flowCanvas.contract.test.mjs  (+7 more)
(+87 files in other folders)
