[package]
name = "requestsmin"
version = "0.1.0"
edition = "2021"

[lib]
name = "requestsmin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
tonic-reflection = "0.12"
prost = "0.13"
prost-types = "0.13"
prost-reflect = { version = "0.14", features = ["serde"] }
protox = "0.7"
walkdir = "2"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
base64 = "0.22"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
